fix: z-index for header - 1100

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
   width: 100vw;
   padding: 15px;
   position: fixed;
-  z-index: 1000;
+  z-index: 1100;
   background-color: var(--templatePurple);
   margin-bottom: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
